alb-addon/harbor-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: harbor-alb
  namespace: cicd 
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: harbor.rayhli.com
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-path: '/'
  labels:
    app: jira-argocd-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: repo-harbor-portal
          servicePort: 80
