alb-addon/ops-view-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: view-alb
  namespace: cattle-monitoring-system 
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: view.rayhli.com
    alb.ingress.kubernetes.io/target-type: instance
  labels:
    app: jira-view-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: opsview-kube-ops-view
          servicePort: 80
