alb-addon/weave-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: weave-alb
  namespace: cattle-monitoring-system 
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    external-dns.alpha.kubernetes.io/hostname: weave.rayhli.com
    alb.ingress.kubernetes.io/target-type: instance
  labels:
    app: jira-weave-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: weave-weave-scope
          servicePort: 80
